# viderai

./: .gitignore  CLAUDE.md  README.md  build_windows.py  pyproject.toml  video-human-detector.spec  viderai.spec
.github/workflows/: release.yml
examples/: usage_example.py
src/video_human_detector/: __init__.py  cli.py  detector.py  main.py  region_selector.py
src/viderai/: __init__.py  _version.py  cli.py  main.py
tests/: test_cli.py  test_detector.py  test_frame_capture.py  test_region_selector.py
